--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,9 +1,14 @@
-.body{
-    background-color: lightblue; opacity: 0.5;
+body{
+    background-color: lightblue;
     font-size: medium;
 }
 
-.ul li{
+h1{
+    text-align: center;
+}
+
+ol{
+
     color: black;
     font-style: italic;
 }
