Se agregarÃon los enlaces en el nav de la pagina

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,7 +19,12 @@ html {
   background-image: url("../images/img_5.jpg");
   min-height: 100%;
 }
-
+.enlaces{
+  display: flex;
+  gap: 2.0rem;
+  font-size: 20px;
+  list-style: none;
+}
 .caption {
   position: absolute;
   left: 0;
